# tls-codec

./: Cargo.toml  Readme.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: gh-pages.yml  test-derive.yml  tests.yml
implementors/zeroize/: trait.Zeroize.js
src/tls_codec/: arrays.rs.html  lib.rs.html  primitives.rs.html  tls_vec.rs.html
tls_codec/: Cargo.toml  all.html  derive.TlsDeserialize.html  derive.TlsSerialize.html  derive.TlsSize.html  enum.Error.html  index.html  sidebar-items.js  struct.SecretTlsVecU16.html  struct.SecretTlsVecU32.html  struct.SecretTlsVecU8.html  struct.TlsByteSliceU16.html  struct.TlsByteSliceU32.html  struct.TlsByteSliceU8.html  struct.TlsByteVecU16.html  struct.TlsByteVecU32.html  struct.TlsByteVecU8.html  struct.TlsSliceU16.html  struct.TlsSliceU32.html  struct.TlsSliceU8.html  struct.TlsVecU16.html  struct.TlsVecU32.html  struct.TlsVecU8.html  trait.Deserialize.html  trait.Serialize.html  trait.Size.html  trait.TlsSize.html
tls_codec/src/: arrays.rs  lib.rs  primitives.rs  tls_vec.rs
tls_codec/tests/: decode.rs
tls_codec/tls_vec/: struct.SecretTlsVecU16.html  struct.SecretTlsVecU32.html  struct.SecretTlsVecU8.html  struct.TlsByteSliceU16.html  struct.TlsByteSliceU32.html  struct.TlsByteSliceU8.html  struct.TlsByteVecU16.html  struct.TlsByteVecU32.html  struct.TlsByteVecU8.html  struct.TlsSliceU16.html  struct.TlsSliceU32.html  struct.TlsSliceU8.html  struct.TlsVecU16.html  struct.TlsVecU32.html  struct.TlsVecU8.html
tls_codec_derive/: Cargo.toml
tls_codec_derive/src/: lib.rs
(+26 files in other folders)
